--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,21 +1,28 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: noko1024 # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
+  - name: Misskey
+    url: https://mk.noko1024.net
+  - name: Emby
     url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: nextcloud
+    url: $NEXTCLOUD
+  - name: PaperMC
+    check: "tcp-ping"
+    url: mc.noko1024.net
+    port: 25565
+  - name: global-wakahara
+    url: https://global-wakahara.com
+
+assignees:
+  - noko1024
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.noko1024.net
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
