--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,8 @@ owner: noko1024 # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
-  - name: Misskey
-    url: https://mk.noko1024.net
-  - name: Emby
-    url: https://en.wikipedia.org
+  - name: おやすみすきー
+    url: https://oyasumi.ski
   - name: nextcloud
     url: $NEXTCLOUD
   - name: PaperMC
