--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: noko1024 # Your GitHub organization or username, where this repository li
 repo: upptime # The name of this repository
 
 sites:
-  - name: おやすみすきー
+  - name: oyasumi.ski
     url: https://oyasumi.ski
   - name: nextcloud
     url: $NEXTCLOUD
